# datafusion-example

./: Cargo.toml  README.md
benches/: add_column_to_df.rs  df_cols_to_json.rs  df_cols_to_struct.rs
examples/: 01-create-df.rs  02-query-df.rs  03-ops-with-df.rs  04-actions.rs  05-deserialize-to-struct.rs  06-algos.rs  06-convert-vec-structs-to-df.rs  07-algos.rs  07-convert-vec-structs-to-df2.rs  08-convert-vec-structs-to-df-trait.rs  09-algos.rs  10-udf.rs  README.md
examples/algo/: least_values.rs  main.rs  one_billion_row_challenge.rs  random.rs  round_robin.rs
examples/dataframe/: actions.rs  convert_vec_structs_to_df.rs  convert_vec_structs_to_df_v2.rs  convert_vec_structs_to_df_v3.rs  create.rs  deserialize_to_struct.rs  main.rs  operations.rs  query.rs
examples/udf/: main.rs  udf.rs
scripts/: run_examples.sh
src/: aws.rs  error.rs  examples.rs  lib.rs  main.rs  saved.rs  scalarvalue.rs  utils.rs
src/macros/: dataframe_macro.rs  mod.rs
src/utils/: aws.rs  constants.rs  conversions.rs  dataframe.rs  datasets.rs  helpers.rs  into_array_ref.rs  macros.rs  mod.rs  scalarvalue.rs  tools.rs  utils.rs
tests/: tests_utils.rs
tests/api/: conversion_tests.rs  convert_ops_df_test.rs  dataframe_tests.rs  get_select_df_test.rs  helpers.rs  helpers_tests.rs  macro_tests.rs  main.rs  ops_with_df_test.rs
