[package]
name = "datafusion_example"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-json = "56.1"
aws-config = "1.6.2"
aws-sdk-s3 = "1.83"
aws-creds = "0.38"
aws-smithy-types = "1.3.1"
datafusion = "50"
bytes = "1"
color-eyre = "0.6"
chrono = "0.4.38"
futures-util = "0.3"
itertools = "0.13"
object_store = { version = "0.12", features = ["aws", "cloud"] }
parquet = "56.1"
tokio = { version = "1", features = ["full"] }
time = "0.3.36"
tokio-stream = "0.1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }
tempfile = "3.15"
rstest = "0.24"

[[bench]]
name = "df_cols_to_json"
harness = false

[[bench]]
name = "df_cols_to_struct"
harness = false

[[bench]]
name = "add_column_to_df"
harness = false
