[package]
name = "datafusion_example"
version = "1.0.0"
edition = "2024"

[dependencies]
arrow-json = "57"
aws-config = "1"
aws-sdk-s3 = "1"
aws-creds = "0.38"
aws-smithy-types = "1"
datafusion = "51"
bytes = "1"
color-eyre = "0.6"
chrono = "0.4"
futures-util = "0.3"
itertools = "0.13"
object_store = { version = "0.12", features = ["aws", "cloud"] }
parquet = "57"
rand = "0.9"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1", features = ["full"] }
time = "0.3"
tokio-stream = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }
tempfile = "3"
rstest = "0.24"

[[bench]]
name = "df_cols_to_json"
harness = false

[[bench]]
name = "df_cols_to_struct"
harness = false

[[bench]]
name = "add_column_to_df"
harness = false
